Update file paths used in a notebook that was moved to a folder

--- a/notebooks/clean/rivers.ipynb
+++ b/notebooks/clean/rivers.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/raw/river/arno.csv')\n",
+    "df = pd.read_csv('../../data/raw/river/arno.csv')\n",
     "\n",
     "# some of our features are missing loads of datapoints;\n",
     "# the thinking here is: if the amount of rainfall at a\n",
