Run the cleaning notebook, updating execution counts, to confirm it works

--- a/notebooks/clean/rivers.ipynb
+++ b/notebooks/clean/rivers.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +135,8 @@
     "dfA = df2[:1643]\n",
     "dfB = df2[1644:]\n",
     "\n",
-    "dfA.to_csv('../data/clean/river/arnoA.csv', index=False)\n",
-    "dfB.to_csv('../data/clean/river/arnoB.csv', index=False)"
+    "dfA.to_csv('../../data/clean/river/arnoA.csv', index=False)\n",
+    "dfB.to_csv('../../data/clean/river/arnoB.csv', index=False)"
    ]
   }
  ],
