Create a notebook for cleaning the Auser aquifer dataset (WIP)
This is a nightmare. nb/clean/aquifers consists of a significant
amount of eda; therefore it should be combined with nb/eda/aquifers

The MICE implemented is all default arguments; these need to be
tweaked to get the best hyperparameters

The results of MICE are multiple datasets; I'm currently just
grabbing literals out of thin air to effect single imputation;
this entire philosophy is wrong and needs to be replaced with
something better

--- a/notebooks/eda/aquifers.ipynb
+++ b/notebooks/eda/aquifers.ipynb
@@ -561,7 +561,12 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -939,7 +944,12 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1350,7 +1360,12 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2013,6 +2028,17 @@
    "metadata": {},
    "source": [
     "![frightening](../../jclark.gif \"maybe i am a monster\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STILL MISSING\n",
+    "#    Volume_CSA\n",
+    "#    Volume_CSAL"
    ]
   }
  ],
