Reorganize notebooks to match data file structure

--- a/notebooks/clean/aquifer/auser.ipynb
+++ b/notebooks/clean/aquifer/auser.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../../data/raw/aquifer/auser.csv')\n",
+    "df = pd.read_csv('../../../data/raw/aquifer/auser.csv')\n",
     "\n",
     "# dates are in format DD/MM/YYYY\n",
     "# convert to this explicitly\n",
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.to_csv('../../data/clean/aquifer/auser.csv', index=False)"
+    "df2.to_csv('../../../data/clean/aquifer/auser.csv', index=False)"
    ]
   }
  ],
