--- a/notebooks/clean/lake/bilancino.ipynb
+++ b/notebooks/clean/lake/bilancino.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/raw/lake/bilancino.csv')\n",
+    "df = pd.read_csv('../../../data/raw/lake/bilancino.csv')\n",
     "\n",
     "# dates are in format DD/MM/YYYY\n",
     "# convert to this explicitly\n",
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.to_csv('../../data/clean/lake/bilancino.csv', index=False)"
+    "df2.to_csv('../../../data/clean/lake/bilancino.csv', index=False)"
    ]
   }
  ],
