--- a/notebooks/clean/river/arno.ipynb
+++ b/notebooks/clean/river/arno.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/raw/river/arno.csv')\n",
+    "df = pd.read_csv('../../../data/raw/river/arno.csv')\n",
     "\n",
     "# some of our features are missing loads of datapoints;\n",
     "# the thinking here is: if the amount of rainfall at a\n",
@@ -135,8 +135,8 @@
     "dfA = df2[:1643]\n",
     "dfB = df2[1644:]\n",
     "\n",
-    "dfA.to_csv('../../data/clean/river/arnoA.csv', index=False)\n",
-    "dfB.to_csv('../../data/clean/river/arnoB.csv', index=False)"
+    "dfA.to_csv('../../../data/clean/river/arnoA.csv', index=False)\n",
+    "dfB.to_csv('../../../data/clean/river/arnoB.csv', index=False)"
    ]
   }
  ],
