--- a/notebooks/eda/aquifer/auser.ipynb
+++ b/notebooks/eda/aquifer/auser.ipynb
@@ -13,19 +13,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Auser aquifer"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/raw/aquifer/auser.csv')\n",
+    "df = pd.read_csv('../../../data/raw/aquifer/auser.csv')\n",
     "df['Date'] = pd.to_datetime(df['Date'], format='%d/%m/%Y')"
    ]
   },
@@ -510,7 +503,12 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1153,7 +1151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![frightening](../../jclark.gif \"maybe i am a monster\")"
+    "![frightening](jclark.gif \"maybe i am a monster\")"
    ]
   },
   {
