--- a/notebooks/clean/river/arno.ipynb
+++ b/notebooks/clean/river/arno.ipynb
@@ -8,14 +8,42 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import miceforest as mf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset 0\n",
+      "1  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "2  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "3  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "Dataset 1\n",
+      "1  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "2  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "3  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "Dataset 2\n",
+      "1  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "2  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "3  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "Dataset 3\n",
+      "1  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "2  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "3  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "Dataset 4\n",
+      "1  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "2  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n",
+      "3  | Temperature_Firenze | Hydrometry_Nave_di_Rosano\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv('../../../data/raw/river/arno.csv')\n",
     "\n",
@@ -41,72 +69,26 @@
     "# temperature data only goes through 2017\n",
     "df = df[df['Date'] < datetime(2017, 3, 9)]\n",
     "\n",
-    "# a six month block is missing target data;\n",
-    "# drop these rows as well\n",
-    "df = df.drop(index=range(3835,4018))\n",
-    "\n",
     "# there are still a few 0s in the target that\n",
     "# should be null; nullify them\n",
-    "df['Hydrometry_Nave_di_Rosano'] = df['Hydrometry_Nave_di_Rosano'].replace(0, float('nan'))"
+    "df['Hydrometry_Nave_di_Rosano'] = df['Hydrometry_Nave_di_Rosano'].replace(0, float('nan'))\n",
+    "\n",
+    "# use multiple imputation to do single imputation;\n",
+    "# be picky about the date, an invalid datatype\n",
+    "kernel = mf.MultipleImputedKernel(\n",
+    "    data=df.drop('Date', axis=1),\n",
+    "    save_all_iterations=True,\n",
+    "    random_state=143\n",
+    ")\n",
+    "kernel.mice(3, verbose=True)\n",
+    "d = df['Date']\n",
+    "df = kernel.impute_new_data(df.drop('Date', axis=1)).complete_data(0)\n",
+    "df['Date'] = d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# There are still some missing values in our data that\n",
-    "# look approximately like this:\n",
-    "#\n",
-    "# 1/1/2000 - 1.9\n",
-    "# 1/2/2000 - 1.7\n",
-    "# 1/3/2000 - NaN\n",
-    "# 1/4/2000 - NaN\n",
-    "# 1/5/2000 - 2.3\n",
-    "# 1/6/2000 - 2.2\n",
-    "#\n",
-    "# The idea here is to interpolate any missing values\n",
-    "# based on the nearest non-null values; so the above\n",
-    "# would be imputed \"by steps\" like so:\n",
-    "#\n",
-    "# 1/2/2000 - 1.7\n",
-    "# 1/3/2000 - 1.9 <- imputed\n",
-    "# 1/4/2000 - 2.1 <- imputed\n",
-    "# 1/5/2000 - 2.3\n",
-    "\n",
-    "def find_previous_nonnull(df, ix, col):\n",
-    "    i = ix\n",
-    "    while df.loc[i][col] != df.loc[i][col]:\n",
-    "        i -= 1\n",
-    "    return i\n",
-    "\n",
-    "def find_next_nonnull(df, ix, col):\n",
-    "    i = ix\n",
-    "    while df.loc[i][col] != df.loc[i][col]:\n",
-    "        i += 1\n",
-    "    return i\n",
-    "\n",
-    "def impute_at(df, ix, col):\n",
-    "    a = find_previous_nonnull(df, ix, col)\n",
-    "    b = find_next_nonnull(df, ix, col)\n",
-    "    steps = b - a\n",
-    "    dist = df.loc[b][col] - df.loc[a][col]\n",
-    "    off = ix - a\n",
-    "    df.at[ix, col] = df.loc[a][col] + off * dist / steps\n",
-    "\n",
-    "def impute_by_step(df, col):\n",
-    "    ix = df[df[col].isnull()].index\n",
-    "    for i in ix:\n",
-    "        impute_at(df, i, col)\n",
-    "\n",
-    "impute_by_step(df, 'Hydrometry_Nave_di_Rosano')\n",
-    "impute_by_step(df, 'Temperature_Firenze')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,26 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# because our data contains a large schism, which may not\n",
-    "# be easy to discern later, we'll just save it as two different datasets\n",
-    "\n",
-    "dfA = df2[:1643]\n",
-    "dfB = df2[1644:]\n",
-    "\n",
-    "dfA.to_csv('../../../data/clean/river/arnoA.csv', index=False)\n",
-    "dfB.to_csv('../../../data/clean/river/arnoB.csv', index=False)"
+    "df2.to_csv('../../../data/clean/river/arno.csv', index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "acea-KYwgFBtm-py3.8",
    "language": "python",
-   "name": "python3"
+   "name": "acea-kywgfbtm-py3.8"
   },
   "language_info": {
    "codemirror_mode": {
