Make Auser preprocessing absolute value transformation more robust
ACEA made it clear that some of the data uses negative instead of
positive numbers, and that the absolute values should be used in
these cases

But this does not apply to *every* feature; temperature, for
example, can meaningfully be negative; therefore, when we look to
apply the absolute value function to the Auser aquifer data, make
sure to only apply it to the targets & not the features

--- a/notebooks/clean/aquifer/auser.ipynb
+++ b/notebooks/clean/aquifer/auser.ipynb
@@ -66,13 +66,12 @@
     "], axis=1)\n",
     "\n",
     "# some features are using 0 when they actually mean NaN\n",
-    "for c in ['Depth_to_Groundwater_LT2', 'Depth_to_Groundwater_SAL', 'Depth_to_Groundwater_CoS']:\n",
+    "targs = ['Depth_to_Groundwater_LT2', 'Depth_to_Groundwater_SAL', 'Depth_to_Groundwater_CoS']\n",
+    "for c in targs:\n",
     "    df[c] = df[c].replace(0, float('nan'))\n",
     "\n",
-    "# ACEA specified that only the absolute values should be used\n",
-    "for c in df.columns:\n",
-    "    if c == 'Date':\n",
-    "        continue\n",
+    "# ACEA specified that only the absolute values of targets should be used\n",
+    "for c in targs:\n",
     "    df[c] = df[c].abs()\n",
     "\n",
     "# use multiple imputation to do single imputation;\n",
