Use local environment for notebook kernels

--- a/notebooks/clean/lake/bilancino.ipynb
+++ b/notebooks/clean/lake/bilancino.ipynb
@@ -59,9 +59,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "acea-KYwgFBtm-py3.8",
    "language": "python",
-   "name": "python3"
+   "name": "acea-kywgfbtm-py3.8"
   },
   "language_info": {
    "codemirror_mode": {
