--- a/notebooks/clean/waterspring/lupa.ipynb
+++ b/notebooks/clean/waterspring/lupa.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../../../data/clean/lupa.csv', index=False)"
+    "df.to_csv('../../../data/clean/waterspring/lupa.csv', index=False)"
    ]
   }
  ],
