Include end dates for non-null values of Auser data

--- a/notebooks/eda/aquifer/auser.ipynb
+++ b/notebooks/eda/aquifer/auser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,47 +347,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Date ... 03/05/98\n",
-      "Rainfall_Gallicano ... 01/01/06\n",
-      "Rainfall_Pontetetto ... 01/01/06\n",
-      "Rainfall_Monte_Serra ... 01/01/06\n",
-      "Rainfall_Orentano ... 01/01/06\n",
-      "Rainfall_Borgo_a_Mozzano ... 01/01/06\n",
-      "Rainfall_Piaggione ... 01/01/06\n",
-      "Rainfall_Calavorno ... 01/01/06\n",
-      "Rainfall_Croce_Arcana ... 01/01/06\n",
-      "Rainfall_Tereglio_Coreglia_Antelminelli ... 01/01/06\n",
-      "Rainfall_Fabbriche_di_Vallico ... 01/01/06\n",
-      "Depth_to_Groundwater_LT2 ... 01/01/06\n",
-      "Depth_to_Groundwater_SAL ... 04/06/07\n",
-      "Depth_to_Groundwater_PAG ... 01/01/09\n",
-      "Depth_to_Groundwater_CoS ... 06/29/06\n",
-      "Depth_to_Groundwater_DIEC ... 01/02/11\n",
-      "Temperature_Orentano ... 03/05/98\n",
-      "Temperature_Monte_Serra ... 03/05/98\n",
-      "Temperature_Ponte_a_Moriano ... 03/05/98\n",
-      "Temperature_Lucca_Orto_Botanico ... 03/05/98\n",
-      "Volume_POL ... 01/01/05\n",
-      "Volume_CC1 ... 01/01/05\n",
-      "Volume_CC2 ... 01/01/05\n",
-      "Volume_CSA ... 01/01/05\n",
-      "Volume_CSAL ... 01/01/05\n",
-      "Hydrometry_Monte_S_Quirico ... 01/01/00\n",
-      "Hydrometry_Piaggione ... 01/01/00\n"
+      "Date ... 03/05/98 -- 06/30/20\n",
+      "Rainfall_Gallicano ... 01/01/06 -- 06/30/20\n",
+      "Rainfall_Pontetetto ... 01/01/06 -- 06/30/20\n",
+      "Rainfall_Monte_Serra ... 01/01/06 -- 06/30/20\n",
+      "Rainfall_Orentano ... 01/01/06 -- 06/30/20\n",
+      "Rainfall_Borgo_a_Mozzano ... 01/01/06 -- 06/30/20\n",
+      "Rainfall_Piaggione ... 01/01/06 -- 06/30/20\n",
+      "Rainfall_Calavorno ... 01/01/06 -- 06/30/20\n",
+      "Rainfall_Croce_Arcana ... 01/01/06 -- 06/30/20\n",
+      "Rainfall_Tereglio_Coreglia_Antelminelli ... 01/01/06 -- 06/30/20\n",
+      "Rainfall_Fabbriche_di_Vallico ... 01/01/06 -- 06/30/20\n",
+      "Depth_to_Groundwater_LT2 ... 01/01/06 -- 06/30/20\n",
+      "Depth_to_Groundwater_SAL ... 04/06/07 -- 06/30/20\n",
+      "Depth_to_Groundwater_PAG ... 01/01/09 -- 06/30/20\n",
+      "Depth_to_Groundwater_CoS ... 06/29/06 -- 06/30/20\n",
+      "Depth_to_Groundwater_DIEC ... 01/02/11 -- 06/30/20\n",
+      "Temperature_Orentano ... 03/05/98 -- 06/30/20\n",
+      "Temperature_Monte_Serra ... 03/05/98 -- 06/30/20\n",
+      "Temperature_Ponte_a_Moriano ... 03/05/98 -- 06/30/20\n",
+      "Temperature_Lucca_Orto_Botanico ... 03/05/98 -- 06/30/20\n",
+      "Volume_POL ... 01/01/05 -- 06/30/20\n",
+      "Volume_CC1 ... 01/01/05 -- 06/30/20\n",
+      "Volume_CC2 ... 01/01/05 -- 06/30/20\n",
+      "Volume_CSA ... 01/01/05 -- 06/30/20\n",
+      "Volume_CSAL ... 01/01/05 -- 06/30/20\n",
+      "Hydrometry_Monte_S_Quirico ... 01/01/00 -- 06/30/20\n",
+      "Hydrometry_Piaggione ... 01/01/00 -- 06/30/20\n"
      ]
     }
    ],
    "source": [
     "# date of first non-null value, by feature\n",
     "for x in df.columns:\n",
-    "    print(x, '...', pd.Timestamp(df[~df[x].isnull()]['Date'].values[0]).strftime('%D'))"
+    "    print(\n",
+    "        x,\n",
+    "        '...',\n",
+    "        pd.Timestamp(df[~df[x].isnull()]['Date'].values[0]).strftime('%D'),\n",
+    "        '--',\n",
+    "        pd.Timestamp(df[~df[x].isnull()]['Date'].values[-1]).strftime('%D')\n",
+    "    )"
    ]
   },
   {
