Add clarifying notes to put the metrics obtained in context

--- a/notebooks/aquifer.ipynb
+++ b/notebooks/aquifer.ipynb
@@ -696,7 +696,9 @@
     "When using the method of \"always predict 0,\" our scores are such:\n",
     "\n",
     "RMSE! 3.87797...  \n",
-    "MAE! 3.87773..."
+    "MAE! 3.87773...\n",
+    "\n",
+    "\\*_for 7 day forecasts_"
    ]
   },
   {
