Add a class to the aquifer pipeline that gives a single score

--- a/notebooks/aquifer.ipynb
+++ b/notebooks/aquifer.ipynb
@@ -28,11 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 308,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "meta = {\n",
@@ -152,11 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def clean_aquifers(df, X, y):\n",
@@ -418,25 +410,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k in meta:\n",
-    "    meta[k]['valid'] = TimeSeriesValidation(7).split(\n",
-    "        meta[k]['data'].df[meta[k]['data'].X],\n",
-    "        meta[k]['data'].df[meta[k]['data'].y]\n",
-    "    ).validate(AlwaysZeroPredictor())"
+    "# this interval\n",
+    "# this model\n",
+    "# these datasets\n",
+    "\n",
+    "class HeterogeneousValidation:\n",
+    "    \n",
+    "    def __init__(self, d, m, *ads):\n",
+    "        \n",
+    "        self.tsvs = []\n",
+    "        for ad in ads:\n",
+    "            tsv = TimeSeriesValidation(d)\n",
+    "            tsv.split(ad.df[ad.X], ad.df[ad.y])\n",
+    "            tsv.validate(m)\n",
+    "            self.tsvs.append(tsv)\n",
+    "    \n",
+    "    def verbose(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def concise(self):\n",
+    "        rmses = [tsv.report()[0]['mean'] for tsv in self.tsvs]\n",
+    "        maes = [tsv.report()[1]['mean'] for tsv in self.tsvs]\n",
+    "        return np.mean(rmses), np.mean(maes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rmse = np.mean([meta[x]['valid'].report()[0]['mean'] for x in meta])\n",
-    "mae = np.mean([meta[x]['valid'].report()[1]['mean'] for x in meta])"
+    "hv = HeterogeneousValidation(\n",
+    "    7,\n",
+    "    AlwaysZeroPredictor(),\n",
+    "    meta['Auser']['data'],\n",
+    "    meta['Doganella']['data'],\n",
+    "    meta['Luco']['data'],\n",
+    "    meta['Petrignano']['data']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8350535491577347, 0.8258548852105945)"
+      ]
+     },
+     "execution_count": 378,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hv.concise()"
    ]
   },
   {
