--- a/notebooks/aquifer.ipynb
+++ b/notebooks/aquifer.ipynb
@@ -22,132 +22,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Specify the file locations, independent variables, and dependent variables for each aquifer dataset:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 308,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "meta = {\n",
-    "    'Auser': {\n",
-    "        'path': '../data/raw/aquifer/auser.csv',\n",
-    "        'features': [\n",
-    "            'Rainfall_Gallicano',\n",
-    "            'Rainfall_Pontetetto',\n",
-    "            'Rainfall_Monte_Serra',\n",
-    "            'Rainfall_Orentano',\n",
-    "            'Rainfall_Borgo_a_Mozzano',\n",
-    "            'Rainfall_Piaggione',\n",
-    "            'Rainfall_Calavorno',\n",
-    "            'Rainfall_Croce_Arcana',\n",
-    "            'Rainfall_Tereglio_Coreglia_Antelminelli',\n",
-    "            'Rainfall_Fabbriche_di_Vallico',\n",
-    "            'Depth_to_Groundwater_PAG',\n",
-    "            'Depth_to_Groundwater_DIEC',\n",
-    "            'Temperature_Orentano',\n",
-    "            'Temperature_Monte_Serra',\n",
-    "            'Temperature_Ponte_a_Moriano',\n",
-    "            'Temperature_Lucca_Orto_Botanico',\n",
-    "            'Volume_POL',\n",
-    "            'Volume_CC1',\n",
-    "            'Volume_CC2',\n",
-    "            'Volume_CSA',\n",
-    "            'Volume_CSAL',\n",
-    "            'Hydrometry_Monte_S_Quirico',\n",
-    "            'Hydrometry_Piaggione'\n",
-    "        ],\n",
-    "        'targets': [\n",
-    "            'Depth_to_Groundwater_SAL',\n",
-    "            'Depth_to_Groundwater_CoS',\n",
-    "            'Depth_to_Groundwater_LT2'\n",
-    "        ]\n",
-    "    },\n",
-    "    'Doganella': {\n",
-    "        'path': '../data/raw/aquifer/doganella.csv',\n",
-    "        'features': [\n",
-    "            'Rainfall_Monteporzio',\n",
-    "            'Rainfall_Velletri',\n",
-    "            'Volume_Pozzo_1',\n",
-    "            'Volume_Pozzo_2',\n",
-    "            'Volume_Pozzo_3',\n",
-    "            'Volume_Pozzo_4',\n",
-    "            'Volume_Pozzo_5+6',\n",
-    "            'Volume_Pozzo_7',\n",
-    "            'Volume_Pozzo_8',\n",
-    "            'Volume_Pozzo_9',\n",
-    "            'Temperature_Monteporzio',\n",
-    "            'Temperature_Velletri'\n",
-    "        ],\n",
-    "        'targets': [\n",
-    "            'Depth_to_Groundwater_Pozzo_1',\n",
-    "            'Depth_to_Groundwater_Pozzo_2',\n",
-    "            'Depth_to_Groundwater_Pozzo_3',\n",
-    "            'Depth_to_Groundwater_Pozzo_4',\n",
-    "            'Depth_to_Groundwater_Pozzo_5',\n",
-    "            'Depth_to_Groundwater_Pozzo_6',\n",
-    "            'Depth_to_Groundwater_Pozzo_7',\n",
-    "            'Depth_to_Groundwater_Pozzo_8',\n",
-    "            'Depth_to_Groundwater_Pozzo_9'\n",
-    "        ]\n",
-    "    },\n",
-    "    'Luco': {\n",
-    "        'path': '../data/raw/aquifer/luco.csv',\n",
-    "        'features': [\n",
-    "            'Rainfall_Simignano',\n",
-    "            'Rainfall_Siena_Poggio_al_Vento',\n",
-    "            'Rainfall_Mensano',\n",
-    "            'Rainfall_Montalcinello',\n",
-    "            'Rainfall_Monticiano_la_Pineta',\n",
-    "            'Rainfall_Sovicille',\n",
-    "            'Rainfall_Ponte_Orgia',\n",
-    "            'Rainfall_Scorgiano',\n",
-    "            'Rainfall_Pentolina',\n",
-    "            'Rainfall_Monteroni_Arbia_Biena',\n",
-    "            'Depth_to_Groundwater_Pozzo_1',\n",
-    "            'Depth_to_Groundwater_Pozzo_3',\n",
-    "            'Depth_to_Groundwater_Pozzo_4',\n",
-    "            'Temperature_Siena_Poggio_al_Vento',\n",
-    "            'Temperature_Mensano',\n",
-    "            'Temperature_Pentolina',\n",
-    "            'Temperature_Monteroni_Arbia_Biena',\n",
-    "            'Volume_Pozzo_1',\n",
-    "            'Volume_Pozzo_3',\n",
-    "            'Volume_Pozzo_4'\n",
-    "        ],\n",
-    "        'targets': [\n",
-    "            'Depth_to_Groundwater_Podere_Casetta'\n",
-    "        ]\n",
-    "    },\n",
-    "    'Petrignano': {\n",
-    "        'path': '../data/raw/aquifer/petrignano.csv',\n",
-    "        'features': [\n",
-    "            'Rainfall_Bastia_Umbra',\n",
-    "            'Temperature_Bastia_Umbra',\n",
-    "            'Temperature_Petrignano',\n",
-    "            'Volume_C10_Petrignano',\n",
-    "            'Hydrometry_Fiume_Chiascio_Petrignano'\n",
-    "        ],\n",
-    "        'targets': [\n",
-    "            'Depth_to_Groundwater_P24',\n",
-    "            'Depth_to_Groundwater_P25'\n",
-    "        ]\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "General function for cleaning the data belonging to (optimistically) *any* aquifer dataset:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -291,26 +171,53 @@
     }
    ],
    "source": [
-    "meta['Auser']['data'] = AquiferDataset(\n",
-    "    meta['Auser']['path'],\n",
-    "    meta['Auser']['features'],\n",
-    "    meta['Auser']['targets']\n",
-    ")\n",
-    "meta['Doganella']['data'] = AquiferDataset(\n",
-    "    meta['Doganella']['path'],\n",
-    "    meta['Doganella']['features'],\n",
-    "    meta['Doganella']['targets']\n",
-    ")\n",
-    "meta['Luco']['data'] = AquiferDataset(\n",
-    "    meta['Luco']['path'],\n",
-    "    meta['Luco']['features'],\n",
-    "    meta['Luco']['targets']\n",
-    ")\n",
-    "meta['Petrignano']['data'] = AquiferDataset(\n",
-    "    meta['Petrignano']['path'],\n",
-    "    meta['Petrignano']['features'],\n",
-    "    meta['Petrignano']['targets']\n",
-    ")"
+    "auser = AquiferDataset(\n",
+    "    '../data/raw/aquifer/auser.csv', [\n",
+    "        'Rainfall_Gallicano', 'Rainfall_Pontetetto', 'Rainfall_Monte_Serra',\n",
+    "        'Rainfall_Orentano', 'Rainfall_Borgo_a_Mozzano', 'Rainfall_Piaggione',\n",
+    "        'Rainfall_Calavorno', 'Rainfall_Croce_Arcana', 'Rainfall_Tereglio_Coreglia_Antelminelli',\n",
+    "        'Rainfall_Fabbriche_di_Vallico', 'Depth_to_Groundwater_PAG', 'Depth_to_Groundwater_DIEC',\n",
+    "        'Temperature_Orentano', 'Temperature_Monte_Serra', 'Temperature_Ponte_a_Moriano',\n",
+    "        'Temperature_Lucca_Orto_Botanico', 'Volume_POL', 'Volume_CC1', 'Volume_CC2',\n",
+    "        'Volume_CSA', 'Volume_CSAL', 'Hydrometry_Monte_S_Quirico', 'Hydrometry_Piaggione'\n",
+    "    ], [\n",
+    "        'Depth_to_Groundwater_SAL', 'Depth_to_Groundwater_CoS', 'Depth_to_Groundwater_LT2'\n",
+    "    ])\n",
+    "\n",
+    "doganella = AquiferDataset(\n",
+    "    '../data/raw/aquifer/doganella.csv', [\n",
+    "        'Rainfall_Monteporzio', 'Rainfall_Velletri', 'Volume_Pozzo_1',\n",
+    "        'Volume_Pozzo_2', 'Volume_Pozzo_3', 'Volume_Pozzo_4', 'Volume_Pozzo_5+6',\n",
+    "        'Volume_Pozzo_7', 'Volume_Pozzo_8', 'Volume_Pozzo_9', 'Temperature_Monteporzio',\n",
+    "        'Temperature_Velletri'\n",
+    "    ], [\n",
+    "        'Depth_to_Groundwater_Pozzo_1', 'Depth_to_Groundwater_Pozzo_2',\n",
+    "        'Depth_to_Groundwater_Pozzo_3', 'Depth_to_Groundwater_Pozzo_4',\n",
+    "        'Depth_to_Groundwater_Pozzo_5', 'Depth_to_Groundwater_Pozzo_6',\n",
+    "        'Depth_to_Groundwater_Pozzo_7', 'Depth_to_Groundwater_Pozzo_8',\n",
+    "        'Depth_to_Groundwater_Pozzo_9'\n",
+    "    ])\n",
+    "\n",
+    "luco = AquiferDataset(\n",
+    "    '../data/raw/aquifer/luco.csv', [\n",
+    "        'Rainfall_Simignano', 'Rainfall_Siena_Poggio_al_Vento', 'Rainfall_Mensano',\n",
+    "        'Rainfall_Montalcinello', 'Rainfall_Monticiano_la_Pineta', 'Rainfall_Sovicille',\n",
+    "        'Rainfall_Ponte_Orgia', 'Rainfall_Scorgiano', 'Rainfall_Pentolina',\n",
+    "        'Rainfall_Monteroni_Arbia_Biena', 'Depth_to_Groundwater_Pozzo_1',\n",
+    "        'Depth_to_Groundwater_Pozzo_3', 'Depth_to_Groundwater_Pozzo_4',\n",
+    "        'Temperature_Siena_Poggio_al_Vento', 'Temperature_Mensano', 'Temperature_Pentolina',\n",
+    "        'Temperature_Monteroni_Arbia_Biena', 'Volume_Pozzo_1', 'Volume_Pozzo_3',\n",
+    "        'Volume_Pozzo_4'\n",
+    "    ], [ 'Depth_to_Groundwater_Podere_Casetta' ])\n",
+    "\n",
+    "petrignano = AquiferDataset(\n",
+    "    '../data/raw/aquifer/petrignano.csv', [\n",
+    "        'Rainfall_Bastia_Umbra', 'Temperature_Bastia_Umbra',\n",
+    "        'Temperature_Petrignano', 'Volume_C10_Petrignano',\n",
+    "        'Hydrometry_Fiume_Chiascio_Petrignano'\n",
+    "    ], [\n",
+    "        'Depth_to_Groundwater_P24', 'Depth_to_Groundwater_P25'\n",
+    "    ])"
    ]
   },
   {
@@ -322,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,38 +347,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "hv = HeterogeneousValidation(\n",
     "    7,\n",
     "    AlwaysZeroPredictor(),\n",
-    "    meta['Auser']['data'],\n",
-    "    meta['Doganella']['data'],\n",
-    "    meta['Luco']['data'],\n",
-    "    meta['Petrignano']['data']\n",
+    "    auser, doganella, luco, petrignano\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 378,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.8350535491577347, 0.8258548852105945)"
-      ]
-     },
-     "execution_count": 378,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hv.concise()"
    ]
   },
   {
@@ -485,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -494,13 +378,13 @@
        "(0.8350535491577347, 0.8258548852105945)"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rmse, mae"
+    "hv.concise() # RMSE, MAE"
    ]
   },
   {
