Simply and improve aquifer validation pipeline

--- a/notebooks/aquifer.ipynb
+++ b/notebooks/aquifer.ipynb
@@ -327,17 +327,18 @@
     "\n",
     "class HeterogeneousValidation:\n",
     "    \n",
-    "    def __init__(self, d, m, *ads):\n",
+    "    def __init__(self, d, m_, names, *ads):\n",
     "        \n",
+    "        self.names = names\n",
     "        self.tsvs = []\n",
     "        for ad in ads:\n",
     "            tsv = TimeSeriesValidation(d)\n",
     "            tsv.split(ad.df[ad.X], ad.df[ad.y])\n",
-    "            tsv.validate(m)\n",
+    "            tsv.validate(m_())\n",
     "            self.tsvs.append(tsv)\n",
     "    \n",
-    "    def verbose(self, names):\n",
-    "        for i, body in enumerate(names):\n",
+    "    def verbose(self):\n",
+    "        for i, body in enumerate(self.names):\n",
     "            self.tsvs[i].plot(body)\n",
     "    \n",
     "    def concise(self):\n",
@@ -354,7 +355,8 @@
    "source": [
     "hv = HeterogeneousValidation(\n",
     "    7,\n",
-    "    AlwaysZeroPredictor(),\n",
+    "    AlwaysZeroPredictor,\n",
+    "    ('Auser', 'Doganella', 'Luco', 'Petrignano'),\n",
     "    auser, doganella, luco, petrignano\n",
     ")"
    ]
@@ -443,7 +445,7 @@
     }
    ],
    "source": [
-    "hv.verbose(['Auser', 'Doganella', 'Luco', 'Petrignano'])"
+    "hv.verbose()"
    ]
   }
  ],
