--- a/notebooks/aquifer.ipynb
+++ b/notebooks/aquifer.ipynb
@@ -999,12 +999,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "last.to_csv('../data/')"
+    "last.to_csv('../data/models/all0_7d/aquifers/detailed.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
