Further exploration with data

--- a/notebooks/all_raw.ipynb
+++ b/notebooks/all_raw.ipynb
@@ -12,7 +12,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -589,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1006,7 @@
        "[8154 rows x 27 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1443,7 @@
        "[6026 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1880,7 @@
        "[7487 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2109,7 @@
        "[5223 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2117,7 +2122,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2468,7 +2478,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2598,7 +2613,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2752,7 +2772,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2787,18 +2816,19 @@
        " 'Hydrometry_Piaggione']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Rainfall, Depth_to_Groundwater, Temperature, Volume, Hydrometry\n",
     "aquifer_auser.columns.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2828,18 +2858,19 @@
        " 'Temperature_Velletri']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Rainfall, Volume, Temperature\n",
     "aquifer_doganella.columns.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2869,13 +2900,42 @@
        " 'Volume_Pozzo_4']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Rainfall, Depth_to_Groundwater, Temperature, Volume\n",
     "aquifer_luco.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Date',\n",
+       " 'Rainfall_Bastia_Umbra',\n",
+       " 'Depth_to_Groundwater_P24',\n",
+       " 'Depth_to_Groundwater_P25',\n",
+       " 'Temperature_Bastia_Umbra',\n",
+       " 'Temperature_Petrignano',\n",
+       " 'Volume_C10_Petrignano',\n",
+       " 'Hydrometry_Fiume_Chiascio_Petrignano']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Rainfall, Temperature, Volume, Hydrometry\n",
+    "aquifer_petrignano.columns.tolist()"
    ]
   },
   {
@@ -2883,7 +2943,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ALL: Rainfall, Temperature, Volume\n",
+    "# SOME: Hydrometry, Depth_to_Groundwater"
+   ]
   }
  ],
  "metadata": {
