--- a/notebooks/aquifer.ipynb
+++ b/notebooks/aquifer.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -32,11 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def clean_aquifers(df, X, y):\n",
@@ -115,11 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class AquiferDataset:\n",
@@ -169,11 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -234,6 +218,18 @@
     "    ], [\n",
     "        'Depth_to_Groundwater_P24', 'Depth_to_Groundwater_P25'\n",
     "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auser.df.to_csv('../data/clean/aquifer/auser.csv')\n",
+    "doganella.df.to_csv('../data/clean/aquifer/doganella.csv')\n",
+    "luco.df.to_csv('../data/clean/aquifer/luco.csv')\n",
+    "petrignano.df.to_csv('../data/clean/aquifer/petrignano.csv')"
    ]
   },
   {
