Tweak MVP notebook

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -8,13 +8,16 @@
     "✓ Did the author develop one or more machine learning models?  \n",
     "✓ Did the author provide a way of assessing the performance and accuracy of their solution?  \n",
     "□ Does the notebook have a **compelling and coherent narrative**?  \n",
+    "\n",
     "□ Does the notebook contain **data visualizations** that help to communicate the author’s main points?  \n",
     "□ Did the author include a thorough discussion on the intersection between features and their prediction? For example between rainfall and amount/level of water.  \n",
     "□ Was there discussion of **automated insight generation**, demonstrating what factors to take into account?  \n",
     "✓ Is the code **documented** in a way that makes it easy to understand and reproduce?  \n",
     "✓ Were all **external sources of data made public** and cited appropriately?  \n",
     "✓ Is the provided model useful/able to forecast water availability in terms of level or water flow in a time interval of the year?  \n",
-    "✓ Is the provided methodology applicable also on new datasets belong to another waterbody?"
+    "✓ Is the provided methodology applicable also on new datasets belong to another waterbody?\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -43,6 +46,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dependencies\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import miceforest as mf\n",
+    "from datetime import datetime\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,18 +70,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# please do not read this code it is scary and unenlightening\n",
-    "import pandas as pd\n",
-    "import miceforest as mf\n",
-    "from datetime import datetime\n",
-    "\n",
     "def drop_where_null(df, col):\n",
     "    return df[~df[col].isnull()]\n",
     "\n",
@@ -101,7 +111,7 @@
     "        df[c] = df[c].abs()\n",
     "    return df\n",
     "\n",
-    "def multiply_impute(df):\n",
+    "def multiply_impute(df):               # USES RANDOMNESS\n",
     "    kernel = mf.MultipleImputedKernel(\n",
     "        data=df,\n",
     "        save_all_iterations=False,\n",
@@ -171,16 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# please do not read this code it is scary and unenlightening\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
     "def chunk_days(df, ch):\n",
     "    lose = df.shape[0] % ch\n",
     "    df = df.iloc[lose:]\n",
@@ -236,7 +239,7 @@
     "\n",
     "#### The Chunking Decision\n",
     "\n",
-    "We are investigating the accuracy of forecasts of lengths 5, 10, and 15 days. We assume that *the values of individual days are less important than the aggregated values over the full period*. When specifying a model, therefore, we must also tell it how many days to chunk into a single unit of time. (Rainfall and volume data was added together; all other features were aggregated with mean).\n",
+    "We are investigating the accuracy of forecasts of lengths 5, 10, and 15 days. We assume that *the values of individual days are less important than the aggregated values over the full period*. When specifying a model, therefore, we must also tell it how many days to chunk into a single unit of time. (Rainfall and volume data are summed; all other features are aggregated with mean).\n",
     "\n",
     "Our chunking function takes two arguments: the dataset and the number of days by which to chunk.\n",
     "\n",
@@ -246,7 +249,7 @@
     "\n",
     "However, we're trying to predict real values. So when values are plotted or shown to the reader, everything is unstandardized and framed in the original units of measurement. Accuracy metrics, as well, will be translated into the original units; just remember that we can only compare accuracy metrics across datasets if we use the ones based on standardized values.\n",
     "\n",
-    "Standardization, as well as other preprocessing discussed, is implemented in a class. The class is initialized with the function to be used for cleaning the data, the chunk interval, the path to the CSV containing our data, and the lists of features and targets. All cleaning and preprocessing is handled by this class, as well as exposing an `unscale` function that can take our data and transform it back to the original scales."
+    "Standardization, as well as other preprocessing discussed, is implemented in a class. The class is initialized with the function to be used for cleaning the data, the chunk interval, the path to the CSV containing our data, and the lists of features and targets. All cleaning and preprocessing is handled by this class, as well as exposing an `unscale` function that can take our standardized predictions and transform them back to the original scales."
    ]
   },
   {
@@ -258,18 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# please do not read this code it is scary and unenlightening\n",
-    "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
     "class AlwaysZeroPredictor:\n",
     "    name = 'zz'\n",
     "    def fit(self, X, y):\n",
@@ -297,7 +293,7 @@
    "source": [
     "Two predictive models were developed:\n",
     "\n",
-    "- Always predict 0, as a baseline\n",
+    "- Always predict 0, as a baseline (N.B.: because predictions are made using standardized scales, this translates into \"always guess the mean\")\n",
     "- Linear regression + last-step-forward; in this case, we train a linear model on all available data, then use the most recent values in the training data to stand in for the predictors of the next step"
    ]
   },
@@ -315,11 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
