--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -881,9 +881,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "acea-KYwgFBtm-py3.8",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "acea-kywgfbtm-py3.8"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -895,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
